 * Added eprints.js for eprints own javascript functions.
 * Included it from the template
 * Added a javascript toggle which can handle toggling things which start
    hidden, without needing a style='none' in their element. 
 * Added classes to handle only_js and no_js without using !important for
    IE compatability.
 * Surround help and the tools bar now use these functions.
 * Changed ref="" in phrases files to id="" and changed the namespace to ep3.
 * Added a warning if a phrase with no id is loaded, although it will fall
    back to ref="" for easy compatibility.
 * Begin new item link now works again.
 * Renamed "Home" screen to "Items"
 * Added "FirstTool" screen which redirects to the first available tool,
    usually Items.
 * Restructured defaultcfg directory - this will take several commit's to
    get all done.
 * Changed Repository and Language to load files from new locations.
 * Fixed minor bug in toolbar.
 * Moved cgi/users/control to home. It's now the key interface for users
    in eprints.
 * Removed some unused cgi scripts.
 * Made EPrint::Remove pass through to FirstTool when it's done.
 * Deprecated get_url( 1 ) as we no longer have staff mode per se.
 * Added $eprint->get_control_url 
 * Made the abstract renderer call that method to link to the control page.
 * entities-en.dtd is now generated in var/ to avoid messing up /cfg
 * XML files are symlink/loaded from var not cfg now. 
 * XML files symlinks are now removed from var after use.
 * fields.dtd is no longer used. 
 * Split XML::GDOME and XML::DOM specific parts of EPrints::XML into two
    sub files. One or the other is required.
 * Removed all uses of hasAttribute as it's not available in XML::DOM
 * Added phrases for tools names.
 * Removed unused components eg. BlisterBar
 * Renaming components to shorter names.

2006-06-26 cjg

 * Split style sheet into parts. Began process of making rational class names
    for all css used in eprints.
 * Removed debug code from workflow.pm